# Optimus

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md
app/: App.xaml  App.xaml.cs  Cmux.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  Optimus.App.csproj  app.manifest
app/Capacity/: CapacityTicker.cs  JsonCalibrationStore.cs  Win32CapacityProvider.cs
app/Controls/: TerminalPane.xaml  TerminalPane.xaml.cs
app/Design/: Tokens.cs
app/Interop/: EngineHandle.cs  ISwapChainPanelNative.cs  JobObjectNativeMethods.cs  MemoryNativeMethods.cs  NativeMethods.g.cs  SafeJobHandle.cs  TerminalJobObject.cs
app/Ipc/: PeerIdentity.cs  PipeServer.cs  PipeServerEffects.cs
app/Sidebar/: CapacityIndicatorView.cs  SidebarView.cs  WorkspaceHost.cs
app/Splits/: PaneTabStrip.cs  PaneView.cs  ShortcutRouter.cs  SplitTreeView.cs  TerminalPaneSurfaceFactory.cs  ToastService.cs  WebView2Surface.cs  WebView2SurfaceFactory.cs  WorkspaceView.cs
cli/: CliParser.cs  Cmux.Cli.csproj  HooksCommand.cs  Optimus.Cli.csproj  PipeClient.cs  Program.cs  StdinReader.cs
core/: Cmux.Core.csproj  Optimus.Core.csproj
core/Capacity/: CalibrationStore.cs  CapacityIndicatorViewModel.cs  CapacityModel.cs  CapacityState.cs  ICapacityProvider.cs
core/Ipc/: AuthState.cs  CommandRouter.cs  EventFrame.cs  ISocketEffects.cs  Methods.cs  PasswordStore.cs  PipeName.cs  SocketAccess.cs  SocketDiscovery.cs  SocketRequest.cs  WireProtocol.cs
core/Notifications/: NotificationCoordinator.cs  NotificationPolicy.cs  NotificationQueue.cs  NotificationStore.cs  SurfaceNotification.cs  TerminalNotification.cs
core/Sidebar/: SidebarProjection.cs  Workspace.cs  WorkspaceManager.cs
core/Splits/: ISurface.cs  Ids.cs  LayoutGeometry.cs  Shortcuts.cs  SplitTree.cs  SplitTreeController.cs  SurfaceLifecycleGuard.cs  SurfaceManager.cs  TabHeaderDto.cs
docs/brainstorms/: 2026-06-06-discoverable-pane-controls-requirements.md
docs/ideation/: 2026-06-10-ram-safe-zone-ideation.md
docs/plans/: 2026-06-04-001-feature-cmux-windows-plan.md  2026-06-04-BUILD-TRACKER.md  2026-06-05-001-feat-phase2-tabs-splits-plan.md  2026-06-06-001-feat-discoverable-pane-controls-plan.md  2026-06-06-002-feat-phase3-notification-system-plan.md  2026-06-10-001-feat-ram-safe-zone-mvp-plan.md
docs/runbooks/: 2026-06-10-ram-safe-zone-smoke.md  2026-06-11-clean-install-smoke.md
engine/: Cargo.toml  build.rs
engine/src/: engine.rs  lib.rs  vt.rs
engine/src/ffi/: events.rs  mod.rs
engine/src/pty/: conpty.rs  mod.rs
engine/src/render/: grid.rs  mod.rs  panel_ffi.rs  terminal.rs  text.rs
engine/tests/: spike2_conpty.rs  spike5_ffi.rs  u4_engine.rs
installer/: README.md  optimus.iss
spikes/spike1_swapchainpanel/: App.xaml  App.xaml.cs  Directory.Build.props  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  spike1_swapchainpanel.csproj
tests/: Cmux.Core.Tests.csproj  Optimus.Core.Tests.csproj
tests/Capacity/: CapacityIndicatorViewModelTests.cs  CapacityModelTests.cs
tests/Cli/: CliParserTests.cs  CliRoundTripTests.cs  HooksCommandTests.cs  StdinReaderTests.cs
tests/Design/: TokensGuardTests.cs
tests/Ipc/: CommandRouterTests.cs  NotificationActionTests.cs  PasswordStoreTests.cs  SocketAccessTests.cs  SocketDiscoveryTests.cs  WireProtocolTests.cs
tests/Notifications/: NotificationCoordinatorTests.cs  NotificationPolicyTests.cs  NotificationQueueTests.cs  NotificationStoreTests.cs
tests/Sidebar/: SidebarProjectionTests.cs  WorkspaceManagerTests.cs
tests/Splits/: LayoutGeometryTests.cs  ShortcutMapTests.cs  SplitTreeControllerTests.cs  SurfaceManagerCapacityTests.cs  SurfaceManagerTests.cs  TabHeaderProjectionTests.cs
