[package]
name = "cmux_engine"
version = "0.1.0"
edition = "2021"
description = "cmux for Windows — terminal engine (VT core + ConPTY + GPU renderer) exposed as a C ABI cdylib"
license = "MIT"

[lib]
# cdylib: the cmux_engine.dll consumed by the C# app over FFI.
# rlib:   so integration tests / spikes in this crate can link the engine directly.
crate-type = ["cdylib", "rlib"]

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = 3
lto = "thin"
